--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <!-- Slide 1 -->
             <div class="item active">
-              <div class="carousel-background"><img src="img/projects/main.png" alt=""></div>
+              <div class="carousel-background"><img src="img/projects/Main.png" alt=""></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2 class="animated fadeInDown">KAARTIKEY NATRAJAN</h2>
@@ -164,7 +164,7 @@
               <div class="col-sm-12 col-md-5">
                 <div class="screenshot wow bounceInRight">
                   <a href="https://github.com/KaartikeyNatrajan/SoundLoops">
-                    <img src="img/projects/soundloops.JPG" class="img-responsive" alt="" />
+                    <img src="img/projects/soundloops.jpg" class="img-responsive" alt="" />
                   </a>
                 </div>
               </div>
@@ -184,7 +184,7 @@
               <div class="col-sm-12 col-md-5">
                 <div class="screenshot wow bounceInRight">
                   <a href="https://github.com/KaartikeyNatrajan/GeometricInferenceTool">
-                    <img src="img/projects/geometricinferencetool.PNG" class="img-responsive" alt="" />
+                    <img src="img/projects/geometricinferencetool.png" class="img-responsive" alt="" />
                   </a>
                 </div>
               </div>
@@ -205,7 +205,7 @@
               <div class="col-sm-12 col-md-5">
                 <div class="screenshot wow bounceInRight">
                   <a href="https://github.com/KaartikeyNatrajan/BatteryCollector">
-                    <img src="img/projects/batterycollector.PNG" class="img-responsive" alt="" />
+                    <img src="img/projects/batterycollector.png" class="img-responsive" alt="" />
                   </a>
                 </div>
               </div>
@@ -226,7 +226,7 @@
               <div class="col-sm-12 col-md-5">
                 <div class="screenshot wow bounceInRight">
                   <a href="https://github.com/KaartikeyNatrajan/loyaltycoin">
-                    <img src="img/projects/ethereum.PNG" class="img-responsive" alt="" />
+                    <img src="img/projects/ethereum.png" class="img-responsive" alt="" />
                   </a>
                 </div>
               </div>
@@ -264,8 +264,8 @@
                 </div>
                 <div class="item">
                   <div class="row">
-                    <iframe width="80%" height="225" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155190907&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-                    <iframe width="80%" height="225" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153077336&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                    <iframe width="80%" height="221" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155190907&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                    <iframe width="80%" height="221" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153077336&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                   </div>
                 </div>
                 <div class="item">
@@ -273,17 +273,6 @@
                     <iframe width="80%" height="450" src="https://www.youtube.com/embed/gb71J0yKRe4?start=750" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
-
-              <a class="carousel-control-prev" href="#carousel-service" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon fa fa-angle-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-
-              <a class="carousel-control-next" href="#carousel-service" role="button" data-slide="next">
-                <span class="carousel-control-next-icon fa fa-angle-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-
 
               <!-- Indicators -->
               <ol class="carousel-indicators">
