--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
             <!-- Slide 1 -->
             <div class="item active">
-              <div class="carousel-background"><img src="img/projects/Main.png" alt=""></div>
+              <div class="carousel-background"><img src="img/projects/Main2.png" alt=""></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2 class="animated fadeInDown">KAARTIKEY NATRAJAN</h2>
-                  <p class="animated fadeInUp" style="font-weight: bold">Entrepreneur | Engineer | Musician</p>
+                  <h5 class="animated fadeInUp" style="font-weight: bold">Entrepreneur | Engineer | Musician</h5>
                   <a href="#about" class="btn-get-started animated fadeInUp">Check out my work</a>
                 </div>
               </div>
@@ -83,49 +83,51 @@
           </div>
         </div>
         <div class="row wow fadeInUp">
-          <div class="col-md-6">
+          <div class="col-md-5">
 
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2">
               <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
-                <img src="img/team/2.jpg" alt="" class="img-circle img-responsive" />
+                <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
                 <h4>Kaartikey Natrajan</h4>
                 <ul class="social-network">
                   
-                  <li><a href="#">
+                  <li><a href="https://www.linkedin.com/in/kaartikeynatrajan/">
                     <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                     </span></a>
                   </li>
-                  <li><a href="#">
+                  <li><a href="https://github.com/KaartikeyNatrajan">
                     <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                     </span></a>
                   </li>
-                  <li><a href="#">
+                  <li><a href="https://www.facebook.com/kaartikey.natrajan">
                     <span class="fa-stack fa-2x">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                     </span></a>
                   </li>
                 </ul>
+                <div>
+                  <h4><a href="http://www.2k1aGames.com">2k1agames.com</a></h4>
+                </div>
               </div>
             </div>
 
           </div>
 
-          <div class="col-md-6 content">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elite storium paralate</h2>
-            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</h3>
+          <div class="col-md-7 content">
+            <h2>I’m an experienced software engineer and entrepreneur with a technical skills in full-stack web, mobile and game development, 3D modelling</h2>
+            <h3>I love to learn and am always on the lookout for opportunities to take my skills to the next level</h3>
+            <p>I’m currently pursuing my Master’s in Computer Science from the University of Massachusetts Amherst, focusing on Artificial Intelligence and Machine Learning and I hold a bachelor’s degree in Information Science and Engineering.</p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet
-              cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend
-              donec Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum
+              During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, SpeedRacer - an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions, and led a team of 3.
+            </p>
+            <p>
+              I also worked full time as a software engineer at Amadeus Labs, Bangalore where I worked primarily as a UI engineer on SellConnect, the company’s flagship product. Additionally, I played the role of mentor for multiple interns for a 5-month period, participated in and won many technical events and hackathons and earned numerous team and division level awards.
+            </p>
             </p>
           </div>
         </div>
@@ -141,7 +143,6 @@
             <div class="section-heading">
               <h2>Projects</h2>
               <div class="heading-line"></div>
-              <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
             </div>
           </div>
         </div>
@@ -152,7 +153,7 @@
                 <div class="wow bounceInLeft">
                   <h4>Sound Loops</h4>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    A web based application that gives users the power to innovate and create their own sound loops using our audio library
                   </p>
                 </div>
               </div>
@@ -172,7 +173,7 @@
                     <h4>Geometeric Inference Tool</h4>
                   </a>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    A tool to create and find solutions to geometrical problems
                   </p>
                 </div>
               </div>
@@ -193,7 +194,7 @@
                     <h4>Battery Collector</h4>
                   </a>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    An endless survival game created using Unreal Engine
                   </p>
                 </div>
               </div>
@@ -214,7 +215,7 @@
                     <h4>Loyalty Coin</h4>
                   </a>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    A loyalty coin system built using Ethereum blockchain
                   </p>
                 </div>
               </div>
@@ -239,7 +240,7 @@
             <div class="section-heading">
               <h2>Music</h2>
               <div class="heading-line"></div>
-              <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
+              <p>Music is an integral part of my life. I've been playing the guitar since I was 11 years old and was previously a music instructor as well. Watch and listen to some of my performances below!</p>
             </div>
           </div>
         </div>
