--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </li>
                 </ul>
                 <div>
-                  <h4><a href="http://www.2k1aGames.com">2k1agames.com</a></h4>
+                  <h4><a href="http://www.2k1aGames.com">2k1aGames.com</a></h4>
                 </div>
               </div>
             </div>
@@ -119,8 +119,8 @@
           </div>
 
           <div class="col-md-7 content">
-            <h2>I’m an experienced software engineer and entrepreneur with a technical skills in full-stack web, mobile and game development, 3D modelling</h2>
-            <h3>I love to learn and am always on the lookout for opportunities to take my skills to the next level</h3>
+            <h3>I’m an experienced software engineer and entrepreneur with technical skills in full-stack web, API and mobile development, 3D modelling and game development. And now I'm transitioning into machine learning as well.</h3>
+            <h3>I love to learn and am always on the lookout for opportunities to take my skills to the next level.</h3>
             <p>I’m currently pursuing my Master’s in Computer Science from the University of Massachusetts Amherst, focusing on Artificial Intelligence and Machine Learning and I hold a bachelor’s degree in Information Science and Engineering.</p>
             <p>
               During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, SpeedRacer - an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions, and led a team of 3.
