--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </li>
                 </ul>
                 <div>
-                  <h4><a href="http://www.2k1aGames.com">2k1aGames.com</a></h4>
+                  <h4><a href="http://www.velocitorq.com">velocitorq.com</a></h4>
                 </div>
               </div>
             </div>
@@ -123,7 +123,7 @@
             <h3>I love to learn and am always on the lookout for opportunities to take my skills to the next level.</h3>
             <p>I’m currently pursuing my Master’s in Computer Science from the University of Massachusetts Amherst, focusing on Artificial Intelligence and Machine Learning and I hold a bachelor’s degree in Information Science and Engineering.</p>
             <p>
-              During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, SpeedRacer - an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions, and led a team of 3.
+              During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, BlazeRacing - an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions, and led a team of 3.
             </p>
             <p>
               I also worked full time as a software engineer at Amadeus Labs, Bangalore where I worked primarily as a UI engineer on SellConnect, the company’s flagship product. Additionally, I played the role of mentor for multiple interns for a 5-month period, participated in and won many technical events and hackathons and earned numerous team and division level awards.
