Added section for blazeracing. Update iframes to be more responsive

--- a/index.html
+++ b/index.html
@@ -232,8 +232,33 @@
       </div>
     </section>
 
+    <!-- BlazeRacing -->
+    <section id="blazeracing" class="home-section bg-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <div class="section-heading">
+              <h2>BlazeRacing</h2>
+              <div class="heading-line"></div>
+              <p>BlazeRacing is a multi-player racing game that I've created using Unreal Engine. You can find out more on <a href="http://www.velocitorq.com">velocitorq.com</a>.<br/>Checkout the trailer below!</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+             <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1nILpeYioDmeoBRisSJm-lWcWKiCp6PA3/preview" frameborder="0"
+             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+             allowfullscreen style="position:absolute; top:0; left: 0"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Music -->
-    <section id="music" class="home-section bg-white">
+    <section id="music" class="home-section bg-gray">
       <div class="container">
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
@@ -253,20 +278,50 @@
                 <div class="item active">
                   <div class="row">
                     <div class="container">
-                      <iframe width="80%" height="450" src="https://www.youtube.com/embed/768-h0wKc_Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+                      <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+                       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/768-h0wKc_Y"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen style="position:absolute; top:0; left: 0"></iframe>
+                      </div>
                     </div>
-                    
                   </div>
                 </div>
                 <div class="item">
                   <div class="row">
-                    <iframe width="80%" height="221" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155190907&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-                    <iframe width="80%" height="221" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153077336&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                    <div class="container">
+                      <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+                       <iframe width="100%" height="100%" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155190907&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                        frameborder="0"
+                        scrolling="no" frameborder="no" allow="autoplay"
+                        style="position:absolute; top:0; left: 0"></iframe>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="item">
                   <div class="row">
-                    <iframe width="80%" height="450" src="https://www.youtube.com/embed/gb71J0yKRe4?start=750" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="container">
+                      <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+                       <iframe width="100%" height="100%" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153077336&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                        frameborder="0"
+                        scrolling="no" frameborder="no" allow="autoplay"
+                        style="position:absolute; top:0; left: 0"></iframe>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="row">
+                    <div class="container">
+                      <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+                       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/gb71J0yKRe4?start=750"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                          allowfullscreen style="position:absolute; top:0; left: 0"></iframe>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -275,6 +330,7 @@
                 <li data-target="#carousel-service" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-service" data-slide-to="1"></li>
                 <li data-target="#carousel-service" data-slide-to="2"></li>
+                <li data-target="#carousel-service" data-slide-to="3"></li>
               </ol>
             </div>
           </div>
