--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               <div class="carousel-inner">
                 <div class="item active">
                   <div class="row">
-                    <div class="container">
+                    <div class="col-md-offset-2 col-md-8">
                       <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/768-h0wKc_Y"
                           frameborder="0"
@@ -289,7 +289,7 @@
                 </div>
                 <div class="item">
                   <div class="row">
-                    <div class="container">
+                    <div class="col-md-offset-2 col-md-8">
                       <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
                        <iframe width="100%" height="100%" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155190907&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
                         frameborder="0"
@@ -301,7 +301,7 @@
                 </div>
                 <div class="item">
                   <div class="row">
-                    <div class="container">
+                    <div class="col-md-offset-2 col-md-8">
                       <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
                        <iframe width="100%" height="100%" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153077336&color=%2300c1c1&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
                         frameborder="0"
@@ -313,7 +313,7 @@
                 </div>
                 <div class="item">
                   <div class="row">
-                    <div class="container">
+                    <div class="col-md-offset-2 col-md-8">
                       <div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/gb71J0yKRe4?start=750"
                           frameborder="0"
