Added blazeracing to menu options

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li class="current"><a href="#intro">Home</a></li>
             <li><a href="#about">About me</a></li>
             <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#blazeracing">BlazeRacing</a></li>
             <li><a href="#music">Music</a></li>
           </ul>
         </div>
@@ -240,7 +241,7 @@
             <div class="section-heading">
               <h2>BlazeRacing</h2>
               <div class="heading-line"></div>
-              <p>BlazeRacing is a multi-player racing game that I've created using Unreal Engine. You can find out more on <a href="http://www.velocitorq.com">velocitorq.com</a>.<br/>Checkout the trailer below!</p>
+              <p>BlazeRacing is a realtime multi-player racing game that I've created using Unreal Engine. You can find out more on <a href="http://www.velocitorq.com">velocitorq.com</a>.<br/>Checkout the trailer below!</p>
             </div>
           </div>
         </div>
