--- a/index.html
+++ b/index.html
@@ -120,16 +120,13 @@
           </div>
 
           <div class="col-md-7 content">
-            <h3>I’m an experienced software engineer and entrepreneur with technical skills in full-stack web, API and mobile development, 3D modelling and game development. And now I'm transitioning into machine learning as well.</h3>
-            <h3>I love to learn and am always on the lookout for opportunities to take my skills to the next level.</h3>
-            <p>I’m currently pursuing my Master’s in Computer Science from the University of Massachusetts Amherst, focusing on Artificial Intelligence and Machine Learning and I hold a bachelor’s degree in Information Science and Engineering.</p>
-            <p>
-              During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, BlazeRacing - an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions, and led a team of 3.
-            </p>
-            <p>
-              I also worked full time as a software engineer at Amadeus Labs, Bangalore where I worked primarily as a UI engineer on SellConnect, the company’s flagship product. Additionally, I played the role of mentor for multiple interns for a 5-month period, participated in and won many technical events and hackathons and earned numerous team and division level awards.
-            </p>
-            </p>
+            <h3>I‘m an experienced software engineer and entrepreneur with skills in full-stack web, API and mobile development, machine learning, game development and 3D modelling.</h3>
+
+            <p>I’m currently working as a Software Engineer Intern at Saltmine, while also pursuing my Master’s in Computer Science from the University of Massachusetts Amherst. I also hold a bachelor’s degree in Information Science and Engineering.</p>
+
+            <p>During my undergrad, I co-founded Estareal, an e-commerce platform for the sale of real estate construction items. As the sole technical member, I single-handedly built, deployed, and secured the entire software stack from scratch. Estareal, unfortunately did not make it to production because of certain business reasons but this failure prompted me to start my own venture, BlazeRacing (Velocitorq Games), an online, real-time, cross-platform, multiplayer racing game. As the founder and technical lead, I developed the entire application from the ground up, made all the business decisions related to the product and led a team of 3.</p>
+
+            <p>I also worked full time as a software engineer at Amadeus Labs, Bangalore where I functioned, primarily, as a UI engineer on SellConnect, the company’s flagship product. Additionally, I played the role of mentor for multiple interns for a 5-month period, participated in and won many technical events and hackathons and earned numerous team and division level awards.</p>
           </div>
         </div>
       </div>
@@ -149,6 +146,45 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
+
+            <div class="row" style="padding: 20px">
+              <div class="col-sm-12 col-md-offset-1 col-md-6">
+                <div class="wow bounceInLeft">
+                  <h4>Threat Level Zombie</h4>
+                  <p>
+                    An action-strategy game created using Unity 3D where players must save the town's population from an exponentially growing zombie infection.
+                  </p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-5">
+                <div class="screenshot wow bounceInRight">
+                  <a href="https://kaartikeynatrajan.github.io/threat-level-zombie-webgame">
+                    <img src="img/projects/threatlevelzombie.png" class="img-responsive" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row" style="padding: 20px">
+              <div class="col-sm-12 col-md-offset-1 col-md-6">
+                <div class="wow bounceInLeft">
+                  <h4>Natural Language to SQL</h4>
+                  <p>
+                    An NLP system using recurrent neural networks (RNN) and LSTM based models built with PyTorch to convert natural language statements to SQL queries
+                  </p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-5">
+                <div class="screenshot wow bounceInRight">
+                  <a href="https://github.com/tiwarikajal/Seq2SQL--Natural-Language-sentences-to-SQL-Queries">
+                    <img src="img/projects/texttosql.png" class="img-responsive" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+
             <div class="row" style="padding: 20px">
               <div class="col-sm-12 col-md-offset-1 col-md-6">
                 <div class="wow bounceInLeft">
