--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <div class="col-sm-12 col-md-5">
                 <div class="screenshot wow bounceInRight">
                   <a href="https://kaartikeynatrajan.github.io/threat-level-zombie-webgame">
-                    <img src="img/projects/threatlevelzombie.png" class="img-responsive" alt="" />
+                    <img src="img/projects/threatlevelzombie.PNG" class="img-responsive" alt="" />
                   </a>
                 </div>
               </div>
